[package]
name = "tex_shooter"
version = "0.1.0"
authors = ["bob-yamaguchi <bob.yamaguchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edsdk = { git = "https://github.com/bob-yamaguchi/edsdk-rs/", branch = "master"}
wfd = {git = "https://github.com/ben-wallis/wfd" }
web-view = { version = "0.7.3", features = ["edge"] }
base64 = {version = "0.13.0"}

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dirs = "4.0.0"

uuid = {version="0.8.2", features=["serde", "v4"]}
chrono = "0.4.19"

